// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept popper props 1`] = `
.emotion-3 {
  list-style: none;
  margin: 0;
  padding: calc(0.5rem - 1px) 0;
  white-space: nowrap;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  display: inline-block;
  width: auto;
  min-width: 150px;
  background: #FFFFFF;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  z-index: 1300;
}

.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #3A3A47;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding: calc(0.5rem - 2px) 1rem;
  font-weight: bold;
  outline: none;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  display: block;
}

.emotion-0:hover {
  background: #F0F0F5;
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #3A3A47;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding: calc(0.5rem - 2px) 1rem;
  font-weight: bold;
  outline: none;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  display: block;
  color: #AAAAB9;
}

.emotion-2:hover {
  background: #F0F0F5;
}

.emotion-2:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

.emotion-2:hover {
  cursor: not-allowed;
  background: transparent;
  color: #AAAAB9;
}

<body>
  <div>
    <button
      aria-controls="dropdown-abc"
      aria-expanded="true"
      aria-haspopup="true"
    >
      Anchor
    </button>
  </div>
  <ul
    class="emotion-3"
    id="dropdown-abc"
    role="menu"
  >
    <li
      class="emotion-0"
      role="menuitem"
      tabindex="0"
    >
      Item #1
    </li>
    <li
      class="emotion-0"
      role="menuitem"
      tabindex="-1"
    >
      Item #2
    </li>
    <li
      aria-disabled="true"
      class="emotion-2"
      role="menuitem"
    >
      Item #3
    </li>
  </ul>
</body>
`;

exports[`should extend DropdownMenu props 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #3A3A47;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding: calc(0.5rem - 2px) 1rem;
  font-weight: bold;
  outline: none;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  display: block;
}

.emotion-0:hover {
  background: #F0F0F5;
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #3A3A47;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding: calc(0.5rem - 2px) 1rem;
  font-weight: bold;
  outline: none;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  display: block;
  color: #AAAAB9;
}

.emotion-2:hover {
  background: #F0F0F5;
}

.emotion-2:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

.emotion-2:hover {
  cursor: not-allowed;
  background: transparent;
  color: #AAAAB9;
}

.emotion-3 {
  list-style: none;
  margin: 0;
  padding: calc(0.5rem - 1px) 0;
  white-space: nowrap;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  display: inline-block;
  width: auto;
  min-width: 150px;
  background: #FFFFFF;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  z-index: 1300;
  color: red;
}

<body>
  <div>
    <button
      aria-controls="dropdown-abc"
      aria-expanded="true"
      aria-haspopup="true"
    >
      Anchor
    </button>
  </div>
  <ul
    aria-label="test"
    class="emotion-3"
    id="dropdown-abc"
    role="menu"
  >
    <li
      class="emotion-0"
      role="menuitem"
      tabindex="0"
    >
      Item #1
    </li>
    <li
      class="emotion-0"
      role="menuitem"
      tabindex="-1"
    >
      Item #2
    </li>
    <li
      aria-disabled="true"
      class="emotion-2"
      role="menuitem"
    >
      Item #3
    </li>
  </ul>
</body>
`;

exports[`should render correctly when closed 1`] = `
<body>
  <div>
    <button
      aria-haspopup="true"
    >
      Anchor
    </button>
  </div>
</body>
`;

exports[`should render correctly when open 1`] = `
.emotion-3 {
  list-style: none;
  margin: 0;
  padding: calc(0.5rem - 1px) 0;
  white-space: nowrap;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  display: inline-block;
  width: auto;
  min-width: 150px;
  background: #FFFFFF;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  z-index: 1300;
}

.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #3A3A47;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding: calc(0.5rem - 2px) 1rem;
  font-weight: bold;
  outline: none;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  display: block;
}

.emotion-0:hover {
  background: #F0F0F5;
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #3A3A47;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding: calc(0.5rem - 2px) 1rem;
  font-weight: bold;
  outline: none;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  display: block;
  color: #AAAAB9;
}

.emotion-2:hover {
  background: #F0F0F5;
}

.emotion-2:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

.emotion-2:hover {
  cursor: not-allowed;
  background: transparent;
  color: #AAAAB9;
}

<body>
  <div>
    <button
      aria-controls="dropdown-abc"
      aria-expanded="true"
      aria-haspopup="true"
    >
      Anchor
    </button>
  </div>
  <ul
    class="emotion-3"
    id="dropdown-abc"
    role="menu"
  >
    <li
      class="emotion-0"
      role="menuitem"
      tabindex="0"
    >
      Item #1
    </li>
    <li
      class="emotion-0"
      role="menuitem"
      tabindex="-1"
    >
      Item #2
    </li>
    <li
      aria-disabled="true"
      class="emotion-2"
      role="menuitem"
    >
      Item #3
    </li>
  </ul>
</body>
`;
